--- a/govuk_frontend_django/templates/govuk_frontend_django/base.html
+++ b/govuk_frontend_django/templates/govuk_frontend_django/base.html
@@ -31,7 +31,7 @@
 
         {% block header %}
             {% gds_header homepageUrl="/" serviceName="Service name" serviceUrl="/" containerClasses="govuk-width-container" %}
-            {% end_gds_header %}
+            {% endgds_header %}
         {% endblock header %}
 
         <div class="govuk-width-container ">
@@ -44,7 +44,7 @@
 
         {% block footer %}
             {% gds_footer %}
-            {% end_gds_footer %}
+            {% endgds_footer %}
         {% endblock footer %}
 
         {% block body_end %}
