--- a/example_project/example/templates/base.html
+++ b/example_project/example/templates/base.html
@@ -13,7 +13,7 @@
     {% gds_header homepageUrl="/" serviceName="GOV.UK Frontend Django example project" serviceUrl="/" containerClasses="govuk-width-container" %}
         {% gds_header_nav_item href=templatetags_url text="Template tags" %}
         {% gds_header_nav_item href=users_url text="User list" %}
-    {% end_gds_header %}
+    {% endgds_header %}
 {% endblock header %}
 
 {% block body_end %}
