--- a/example_project/example/templates/example/templatetags.html
+++ b/example_project/example/templates/example/templatetags.html
@@ -25,7 +25,7 @@
         {% gds_accordion_item heading="Button" summary="The button component" %}
             {% gds_component "button" text="Save me" %}
         {% endgds_accordion_item %}
-        {% gds_accordion_item heading="Checkboxes" summary="The checkboxes component" %}
+        {% comment %} {% gds_accordion_item heading="Checkboxes" summary="The checkboxes component" %}
             {% set email_html %}
                 <p class="govuk-body">Conditional email content</p>
             {% endset %}
@@ -39,7 +39,7 @@
                     <p class="govuk-body">Conditional text content</p>
                 {% endgds_checkbox_conditional %}
             {% endgds_checkboxes %}
-        {% endgds_accordion_item %}
+        {% endgds_accordion_item %} {% endcomment %}
         {% gds_accordion_item heading="Cookie banner" summary="The cookie banner component" %}
             {% set message_3_html %}
                 <p class="govuk-body">Message 3 content</p>
@@ -101,6 +101,18 @@
                 {% gds_header_nav_item href="/" text="Nav item 2" %}
                 {% gds_header_nav_item href="/components/" text="Components" %}
             {% endgds_header %}
+            OR
+            {% gds_header homepageUrl="/" productName="Some product" serviceName="Service name" serviceUrl="/" %}
+                {% if True %}
+                    {% gds_header_nav_item href="/" text="Truthy nav link" %}
+                {% endif %}
+                {% comment %} {% if False %}
+                    {% gds_header_nav_item href="/" text="Falsey nav link" %}
+                {% endif %} {% endcomment %}
+                {% for nav_link in nav_links %}
+                    {% gds_header_nav_item href=nav_link.1 text=nav_link.0 %}
+                {% endfor %}
+            {% endgds_header %}
         {% endgds_accordion_item %}
         {% gds_accordion_item heading="Hint" summary="The hint component" %}
             {% gds_component "hint" text="Some hint text" %}
@@ -120,11 +132,11 @@
         {% gds_accordion_item heading="Panel" summary="The panel component" %}
             {% gds_component "panel" titleText="Panel title" text="Panel content" %}
         {% endgds_accordion_item %}
-        {% gds_accordion_item heading="Phase banner" summary="The phase banner component" %}
+        {% comment %} {% gds_accordion_item heading="Phase banner" summary="The phase banner component" %}
             {% gds_phase_banner text="Phase banner text" tag=phase_tag %}
                 {% gds_component "tag" text="Tag content" %}
             {% endgds_phase_banner %}
-        {% endgds_accordion_item %}
+        {% endgds_accordion_item %} {% endcomment %}
         {% gds_accordion_item heading="Skip link" summary="The skip link component" %}
             <p class="govuk-body">The skip link is a hidden component</p>
             {% gds_component "skip-link" text="Skip to main content" %}
@@ -231,10 +243,6 @@
         {% endgds_accordion_item %}
     {% endgds_accordion %}
 
-
-    {% comment %} TO FIX: {% endcomment %}
-    {% comment %} {% gds_component "summary-list" %} {% endcomment %}
-    {% comment %} {% gds_component "table" %} {% endcomment %}
 
     {% comment %} FIELDS: {% endcomment %}
     {% comment %} {% gds_component "character-count" %} {% endcomment %}
