--- a/govuk_frontend_django/templates/govuk_frontend_django/base.html
+++ b/govuk_frontend_django/templates/govuk_frontend_django/base.html
@@ -8,12 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <meta name="theme-color" content="#0b0c0c">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="shortcut icon" sizes="16x16 32x32 48x48" href='{% static "frontend/govuk/assets/images/favicon.ico" %}' type="image/x-icon">
+        <link rel="shortcut icon" sizes="16x16 32x32 48x48" href='{% static "govuk-frontend/govuk/assets/images/favicon.ico" %}' type="image/x-icon">
         <link rel="mask-icon" href='{% static "govuk-frontend/govuk/assets/images/govuk-mask-icon.svg" %}' color="#0b0c0c">
-        <link rel="apple-touch-icon" sizes="180x180" href='{% static "frontend/govuk/assets/images/govuk-apple-touch-icon-180x180.png" %}'>
-        <link rel="apple-touch-icon" sizes="167x167" href='{% static "frontend/govuk/assets/images/govuk-apple-touch-icon-167x167.png" %}'>
-        <link rel="apple-touch-icon" sizes="152x152" href='{% static "frontend/govuk/assets/images/govuk-apple-touch-icon-152x152.png" %}'>
-        <link rel="apple-touch-icon" href='{% static "frontend/govuk/assets/images/govuk-apple-touch-icon.png" %}'>
+        <link rel="apple-touch-icon" sizes="180x180" href='{% static "govuk-frontend/govuk/assets/images/govuk-apple-touch-icon-180x180.png" %}'>
+        <link rel="apple-touch-icon" sizes="167x167" href='{% static "govuk-frontend/govuk/assets/images/govuk-apple-touch-icon-167x167.png" %}'>
+        <link rel="apple-touch-icon" sizes="152x152" href='{% static "govuk-frontend/govuk/assets/images/govuk-apple-touch-icon-152x152.png" %}'>
+        <link rel="apple-touch-icon" href='{% static "govuk-frontend/govuk/assets/images/govuk-apple-touch-icon.png" %}'>
 
         {% block head %}
             <link href='{% static "govuk-frontend/govuk/all.css" %}' rel="stylesheet">
@@ -48,7 +48,7 @@
         {% endblock footer %}
 
         {% block body_end %}
-            <script src='{% static "govuk-frontend/all.js" %}''></script>
+            <script src='{% static "govuk-frontend/govuk/all.js" %}'></script>
             <script>window.GOVUKFrontend.initAll()</script>
         {% endblock body_end %}
     </body>
