Update base template

--- a/govuk_frontend_django/templates/govuk_frontend_django/base.html
+++ b/govuk_frontend_django/templates/govuk_frontend_django/base.html
@@ -34,8 +34,8 @@
             {% endgds_header %}
         {% endblock header %}
 
-        <div class="govuk-width-container ">
-            <main class="govuk-main-wrapper " id="main-content" role="main">
+        <div class="{% block container_class_names %}govuk-width-container{% endblock container_class_names %}">
+            <main class="{% block main_class_names %}govuk-main-wrapper{% endblock main_class_names %}" id="main-content" role="main">
                 {% block content %}
                     <h1 class="govuk-heading-xl">Default page template</h1>
                 {% endblock content %}
