--- a/example_project/example/templates/base.html
+++ b/example_project/example/templates/base.html
@@ -1,21 +1,19 @@
 {% extends "govuk_frontend_django/base.html" %}
 {% load static govuk_frontend_django %}
-
-{% block title %}GOV.UK Frontend Django example project{% endblock title %}
-
+{% block title %}
+    GOV.UK Frontend Django example project
+{% endblock title %}
 {% block head %}
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css" />
 {% endblock head %}
-
 {% block header %}
     {% url "templatetags" as templatetags_url %}
     {% url "user-listing" as users_url %}
     {% gds_header homepageUrl="/" serviceName="GOV.UK Frontend Django example project" serviceUrl="/" containerClasses="govuk-width-container" %}
-        {% gds_header_nav_item href=templatetags_url text="Template tags" %}
-        {% gds_header_nav_item href=users_url text="User list" %}
+        {% inline_gds_header_nav_item href=templatetags_url text="Template tags" %}
+        {% inline_gds_header_nav_item href=users_url text="User list" %}
     {% endgds_header %}
 {% endblock header %}
-
 {% block body_end %}
     <script src='{% static "govuk-frontend/govuk/all.js" %}'></script>
     <script>window.GOVUKFrontend.initAll()</script>
